tests/sumo/output/e1Instant/errors/id_missing/errors.sumo
Error: Attribute 'id' is missing in definition of a instantInductionLoop.
Quitting (on error).
